# Light-strip-tractor

./: 2.cpp  3.cpp  4.cpp  5.cpp  ArmorDetector.cpp  ArmorDetector.h  CMakeCache.txt  CMakeLists.txt  LightBarTrack.cpp  MotionEstimator.cpp  MotionEstimator.h  MotionPredictor.h  README.md  README.txt  ai1.cpp  ballistic_calculation.cpp  double foretracktor.cpp  double-foretracktor.cpp  foretracktor.cpp  test.cpp  trackor.cpp
